--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "googleapis": "^39.2.0",
     "puppeteer": "^1.19.0",
     "puppeteer-core": "^1.19.0"
   }
