--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "googleapis": "^39.2.0",
+    "moment": "^2.24.0",
     "puppeteer": "^1.19.0",
     "puppeteer-core": "^1.19.0"
   }
