--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "googleapis": "^39.2.0",
+    "mimetext": "^0.2.1",
     "moment": "^2.24.0",
+    "moment-timezone": "^0.5.28",
     "puppeteer": "^1.19.0",
     "puppeteer-core": "^1.19.0"
   }
