--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nodemon": "^1.19.1"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "googleapis": "^39.2.0",
     "mimetext": "^0.2.1",
     "moment": "^2.24.0",
